--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -92,3 +92,10 @@ This is meant for players who don't want to mess with inviting to parties etc
 which should hopefully reduce the amount of complaints about one shots. 
 Maps that have elemental mob damage affixes require higher resists
 If there's some unique way to mitigate elemental damage in the future, like a stat that reduces say Fire damage received by 90%, i'll have to include to allow it to bypass the requirement system.
+
+New Feature, Prophecies:
+
+Killing Mobs in maps now rewards favor currency which can be spent to buy prophecy rewards.
+Prophecy rewards are a way to target farm things! You can buy stuff like "3 Epic Boots" or "5 runes".
+The higher mob lvl and tier you kill while filling up the progress bar, the higher lvl and tier rewards you will have at the end.
+The more specific the reward, the costlier it is. A Sword reward is more expensive than an any gear reward etc
