--- a/src/main/resources/assets/mmorpg/lang/ru_ru.json
+++ b/src/main/resources/assets/mmorpg/lang/ru_ru.json
@@ -1,8 +1,8 @@
 {
 	
 	"translator_guide_0": "Этот раздел предоставляет руководство для переводчиков, предлагая исходные данные для внутренних деталей:",
-	"translator_guide_1": "1) Некоторые строки языка имеют соответствующий контекст локали, особенно строки форматтера. Понимание этих контекстов помогает переводчикам понять, как функционирует строка языка. Перевод этих строк не требуется.",
-	"translator_guide_2": "2) Некоторые строки содержат формат переноса строки (\\n). Переводчик может добавлять или удалять этот формат по своему усмотрению в зависимости от фактической длины переведенного текста.",
+	"translator_guide_1": "1. Некоторые строки языка имеют соответствующий контекст локали, особенно строки форматтера. Понимание этих контекстов помогает переводчикам понять, как функционирует строка языка. Перевод этих строк не требуется.",
+	"translator_guide_2": "2. Некоторые строки содержат формат переноса строки (\\n). Переводчик может добавлять или удалять этот формат по своему усмотрению в зависимости от фактической длины переведенного текста.",
 
 	"death.attack.mmorpg": "%1$s был убит %2$s",
 	"block.mmorpg.harvest.purple": "Хаотические семена",
